fix li alignment

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,95 @@
 @import url('https://fonts.googleapis.com/css2?family=Noticia+Text&display=swap');
 
+@media screen and (min-width: 768px){
+ 
+  .App{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    border: 1px solid black;
+    box-sizing: border-box;
+    text-align: center;
+    background-color: #EDE6FF;
+    font-family: 'Noticia Text', serif;
+  }
+  .SearchBar{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+  }
+  .SearchBar input{
+    width: 400px;
+    height: 48px;
+    font-size: 16px;
+  }
+  .SearchBar ul{
+    list-style: none;
+    width: 400px;
+    padding: 0;
+  }
+  .SearchBar ul li{
+    padding: 8px 4px;
+    color: blueviolet;
+    margin: 2px 0px;
+    border: 1px solid gray;
+    height: 40px;
+    text-align: left;
 
-@media screen and (min-width: 349px) and (max-width: 767px){  
+
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+
+  }
+  .SearchBar ul li:hover{
+    background-color: lightgray;
+  }
+
+  .SearchBar button{
+    font-size: 20px;
+    background-color: #6543BD;
+    color: white;
+  }
+
+  .Header h1{
+    text-align: center;
+    padding: 12px;
+    font-size: 48px;
+  }
+  .Main{
+    margin: 48px auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    background-color: #ffffff;
+    width: 800px;
+
+  }
+  .Main .Question{
+    width: 60%;
+    padding: 12px;
+  }
+  .Main .Question h1{
+    margin: 0;
+  }
+  .Main .Answer{
+    width: 80%;
+    padding: 0px 12px 12px 12px;
+  }
+  .Main .Answer h4{
+    font-size: 20px;
+  }
+
+  .Footer{
+    padding: 20px;
+  }
+}
+
+
+@media screen and (max-width: 767px){  
   .App {
     border: 1px solid black;
     box-sizing: border-box;
@@ -31,7 +119,7 @@
     margin: 2px 0px;
     border: 1px solid gray;
     height: 40px;
-
+    text-align: left;
 
     display: flex;
     justify-content: flex-start;
